--- a/settings.org
+++ b/settings.org
@@ -397,11 +397,26 @@ Window switching made easy via Ace Window.
 #+end_src
 
 ** Magit
-
 #+begin_src emacs-lisp
   (use-package magit
     :straight t
     :bind (("C-x g" . magit-status)))
+#+end_src
+
+Controlling how magit status opens.
+#+begin_src emacs-lisp
+  (setq magit-display-buffer-function
+        (lambda (buffer)
+          (display-buffer
+           buffer (if (and (derived-mode-p 'magit-mode)
+                           (memq (with-current-buffer buffer major-mode)
+                                 '(magit-process-mode
+                                   magit-revision-mode
+                                   magit-diff-mode
+                                   magit-stash-mode
+                                   magit-status-mode)))
+                      nil
+                    '(display-buffer-same-window)))))
 #+end_src
 ** Git Gutter
 #+begin_src emacs-lisp
