--- a/settings.org
+++ b/settings.org
@@ -723,6 +723,11 @@ offsets, this packages is supposed to infer based on the file.
                                :subprotocol "awsathena"
                                :subname "//athena.us-east-1.amazonaws.com:443/my_database;AwsCredentialsProviderArguments=default;AwsCredentialsProviderClass=com.simba.athena.amazonaws.auth.profile.ProfileCredentialsProvider;S3OutputLocation=s3://jayg-athena-query-holder/"))
 #+end_src
+** libvterm
+#+begin_src emacs-lisp :results silent
+  (use-package vterm
+    :straight t)
+#+end_src
 * Languages
 ** General
 *** Smart Parens
@@ -766,13 +771,30 @@ Not working yet...
 #+end_src
 *** LSP Mode
 Installing this to experiment with Kotlin but likely to use elsewhere.
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
   (use-package lsp-mode
     :commands (lsp lsp-deferred)
     :straight t
     :init (setq lsp-keymap-prefix "C-c l")
-    :config (lsp-enable-which-key-integration t))
+    :custom
+    (lsp-eldoc-render-all t)
+    (lsp-idle-delay 0.6)
+    :config (lsp-enable-which-key-integration t)
+    (add-hook 'lsp-mode-hook 'lsp-ui-mode))
+  #+end_src
+
+#+begin_src emacs-lisp :results silent
+  (use-package lsp-ui
+    :straight t
+    :commands lsp-ui-mode
+    :custom
+    (lsp-ui-peek-always-show t)
+    (lsp-ui-sideline-show-hover t)
+    (lsp-ui-doc-enable nil))
 #+end_src
+
+#+RESULTS:
+
 *** GraphQL
 #+begin_src emacs-lisp
   (use-package graphql-mode
@@ -942,8 +964,10 @@ Experimental, not sure if Kotlin is worth taking a run at in emacs or not with
 IntelliJ having first class support :/.
 #+begin_src emacs-lisp
   (use-package kotlin-mode
-    :straight t)
+    :straight t
+    :hook (kotlin-mode . lsp-deferred))
 #+end_src
+
 ** Typescript
 Require's lsp server for typescript.
 npm install -g typescript-language-server
@@ -1004,10 +1028,51 @@ LSP solution or Elpy, Elply for now.
     :init
     (elpy-enable)
     (setq elpy-rpc-python-command "python3")
-    ;;(setq elpy-rpc-virtualenv-path 'system)
+    (setq elpy-rpc-virtualenv-path 'current)
     )
 #+end_src
 
+** C/C++
+
+#+begin_src emacs-lisp :results silent
+  (setq company-clang-executable "clang-11")
+#+end_src
+
+** Rust
+
+Rust is installed in the usual way via the rust up site. For now I'm trying the lsp mode for rust as detailed here: https://robert.kra.hn/posts/2021-02-07_rust-with-emacs/
+
+I clone the rust-analyzer projects into my usual directory structure ~/development/org/project, so in this case ~/development/rust-analyzer/rustanalyzer.
+
+*** Rustic
+
+#+begin_src emacs-lisp :results silent
+  (use-package rustic
+    :straight t
+    :bind (:map rustic-mode-map
+                ("M-j" . lsp-ui-imenu)
+                ("M-?" . lsp-find-references)
+                ("C-c C-c l" . flycheck-list-erros)
+                ("C-c C-c a" . lsp-execute-code-action)
+                ("C-c C-c r" . lsp-rename)
+                ("C-c C-c q" . lsp-workspace-restart)
+                ("C-c C-c Q" . lsp-workspace-shutdown)
+                ("C-c C-c s" . lsp-rust-analyzer-status))
+    :hook (rustic-mode . lsp-deferred)
+    :custom
+      (lsp-rust-analyzer-cargo-watch-command "clippy")
+    :config
+    (setq rustic-format-on-save t)
+    (add-hook 'rustic-mode-hook 'rk/rustic-mode-hook))
+
+  (defun rk/rustic-mode-hook ()
+    ;; so that run C-c C-c C-r works without having to confirm, but don't try to
+    ;; save rust buffers that are not file visiting. Once
+    ;; https://github.com/brotzeit/rustic/issues/253 has been resolved this should
+    ;; no longer be necessary.
+    (when buffer-file-name
+      (setq-local buffer-save-without-query t)))
+#+end_src
 * Misc Functions
 ** xml format function (stolen from Chris Gore)
 #+begin_src emacs-lisp
