Added explicit project.el requirement to fix broken magit.

--- a/settings.org
+++ b/settings.org
@@ -156,6 +156,17 @@ init (nor am I sure I want it to). So not everything is likely to be 100% yet.
     :straight t)
 #+end_src
 ** Projectile
+
+I'm not sure what exactly happened here, but I believe when I installed Rustic
+an older version of project.el was installed somehow but not loaded? Which
+doesn't make real sense, rustic requires project but the version in the straight
+repos was up to date (at least as far as master). Still explicitly requiring the
+project package makes the problem go away...
+#+begin_src emacs-lisp :results silent
+  (use-package project
+    :straight t)
+#+end_src
+
 #+begin_src emacs-lisp
   (use-package projectile
     :straight  t
@@ -368,15 +379,6 @@ remember.
   (use-package expand-region
     :straight t
     :bind ("M-@" . er/expand-region))
-#+end_src
-*** Hacky fix for magit issue
-
-One of the additions I made around commit
-4cf95ee81b66820b6cb2e48eb578f337a36d9711 seems to have broken the commands in
-magit. Comment out this line when ready to figure out wth happened. This is just
-a temporary workaround.
-#+begin_src emacs-lisp :results silent
-(setq project-switch-commands t)
 #+end_src
 * General Tools
 ** Treemacs
